RESOLVED FIXED303618
[Site Isolation] Cross-site iframes don't receive DeviceOrientationEvents
https://bugs.webkit.org/show_bug.cgi?id=303618
Summary [Site Isolation] Cross-site iframes don't receive DeviceOrientationEvents
rupin
Reported 2025-12-05 01:02:31 PST
[Site Isolation] Cross-site iframes don't receive DeviceOrientationEvents
Attachments
Radar WebKit Bug Importer
Comment 1 2025-12-05 01:02:37 PST
rupin
Comment 2 2025-12-05 01:39:37 PST
EWS
Comment 3 2025-12-05 14:59:01 PST
Committed 304018@main (21b3626e181e): <https://commits.webkit.org/304018@main> Reviewed commits have been landed. Closing PR #54913 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.