Source/WebKit/UIProcess/WebPageProxy.h
@@ -2875,6 +2875,10 @@ public:
     void dropNetworkActivity();
     bool hasValidNetworkActivity() const;
 
+#if PLATFORM(IOS_FAMILY) && ENABLE(DEVICE_ORIENTATION)
+    RefPtr<WebDeviceOrientationUpdateProviderProxy> webDeviceOrientationUpdateProviderProxy();
+#endif
+
 private:
     WebPageProxy(PageClient&, WebProcessProxy&, Ref<API::PageConfiguration>&&);
     void platformInitialize();
