Source/WebKit/UIProcess/ios/WebDeviceOrientationUpdateProviderProxy.mm
@@ -57,6 +57,16 @@ WebDeviceOrientationUpdateProviderProxy::~WebDeviceOrientationUpdateProviderProx
         page->protectedLegacyMainFrameProcess()->removeMessageReceiver(Messages::WebDeviceOrientationUpdateProviderProxy::messageReceiverName(), page->webPageIDInMainFrameProcess());
 }
 
+void WebDeviceOrientationUpdateProviderProxy::addAsMessageReceiverForProcess(WebProcessProxy& process, WebCore::PageIdentifier pageID)
+{
+    process.addMessageReceiver(Messages::WebDeviceOrientationUpdateProviderProxy::messageReceiverName(), pageID, *this);
+}
+
+void WebDeviceOrientationUpdateProviderProxy::removeAsMessageReceiverForProcess(WebProcessProxy& process, WebCore::PageIdentifier pageID)
+{
+    process.removeMessageReceiver(Messages::WebDeviceOrientationUpdateProviderProxy::messageReceiverName(), pageID);
+}
+
 void WebDeviceOrientationUpdateProviderProxy::startUpdatingDeviceOrientation()
 {
     [[WebCoreMotionManager sharedManager] addOrientationClient:this];
@@ -79,8 +89,11 @@ void WebDeviceOrientationUpdateProviderProxy::stopUpdatingDeviceMotion()
 
 void WebDeviceOrientationUpdateProviderProxy::orientationChanged(double alpha, double beta, double gamma, double compassHeading, double compassAccuracy)
 {
-    if (RefPtr page = m_page.get())
-        page->protectedLegacyMainFrameProcess()->send(Messages::WebDeviceOrientationUpdateProvider::DeviceOrientationChanged(alpha, beta, gamma, compassHeading, compassAccuracy), m_page->webPageIDInMainFrameProcess());
+    if (RefPtr page = m_page.get()) {
+        page->forEachWebContentProcess([&](auto& webProcess, auto pageID) {
+            webProcess.send(Messages::WebDeviceOrientationUpdateProvider::DeviceOrientationChanged(alpha, beta, gamma, compassHeading, compassAccuracy), pageID);
+        });
+    }
 }
 
 void WebDeviceOrientationUpdateProviderProxy::motionChanged(double xAcceleration, double yAcceleration, double zAcceleration, double xAccelerationIncludingGravity, double yAccelerationIncludingGravity, double zAccelerationIncludingGravity, std::optional<double> xRotationRate, std::optional<double> yRotationRate, std::optional<double> zRotationRate)
